Cadastrar jogo corrigido com placar

--- a/FRONT_Copa/src/app/components/pages/jogo/cadastrar-jogo/cadastrar-jogo.component.html
+++ b/FRONT_Copa/src/app/components/pages/jogo/cadastrar-jogo/cadastrar-jogo.component.html
@@ -12,7 +12,7 @@
 
     <label>Seleção B</label>
     <div>
-      <select [(ngModel)]="selecaoB">
+      <select [(ngModel)]="selecaoBId">
         <option *ngFor="let selecao of selecoes" [value]="selecao.id">{{selecao.nome}}</option>
       </select>
     </div>
