--- a/FRONT_Copa/src/app/components/pages/jogo/listar-jogo/listar-jogo.component.html
+++ b/FRONT_Copa/src/app/components/pages/jogo/listar-jogo/listar-jogo.component.html
@@ -18,7 +18,7 @@
         <td>x</td>
         <td>{{jogo.placarB}}</td>
         <td>{{jogo.selecaoB?.nome}}</td>
-        <td><button>Palpitar</button></td>
+        <td><a routerLink="/pages/jogo/palpitar/{{ jogo.id }}">Palpitar</a></td>
       </tr>
     </table>
   </mat-card-content>
